--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,95 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background: #0D0628;
+  opacity: 1;
   color: white;
+  overflow: hidden;
+}
+.container {
+  overflow: hidden;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  min-height: 105px;
+  cursor: pointer;
+  box-sizing: border-box;
+  color: #FCA17D;
+  font-size: 4em;
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+.eight, .two {
+  border-left: 3px solid #DA627D;
+  border-right: 3px solid #DA627D;
+}
+
+.one,.two,.three,.four,.six{
+  border-bottom: 3px solid #DA627D;
+}
+
+.five {
+  border: 3px solid #DA627D;
+  border-top: 0;
+}
+
+.boxWrap {
+  padding: 25px 16px !important; 
+  box-sizing: border-box;
+}
+
+.heading {
+  font-family: 'Shojumaru', cursive;
+  font-size: 40px;
+  text-align: center;
+  color: #DA627D;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.turn {
+  text-align: center;
+  font-size: x-large;
+  color: #DA627D;
+  font-weight: 400;
+  font-family: 'Shojumaru', cursive;
+  text-transform: capitalize;
 }
